<resources>
    <string name="app_name">exam2021</string>
    <string name="buy">BUY</string>
    <string name="sell">SELL</string>
    <string name="my_portfolio">My portfolio</string>
    <string name="transactions">Transactions</string>
    <string name="usd">USD</string>
    <string name="image_of_cryptocoin">Image of cryptocoin</string>
    <string name="sell_amount">Sell amount</string>
    <string name="holding">Holding</string>
    <string name="textview">TextView</string>
    <string name="string_usd" />
    <string name="cryptoname">Cryptoname</string>
    <string name="cryptoprice">Cryptoprice</string>
    <string name="_2">2%</string>
    <string name="_343">$343</string>
    <string name="enter_amount">Enter amount</string>
</resources>